--- a/app/src/main/res/layout/tbl_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/tbl_tarrakki_zyaada.xml
@@ -45,7 +45,7 @@
         android:gravity="center"
         android:minLines="2"
         android:padding="4dp"
-        android:text="@string/tarrakki_zyaada_new_line"
+        android:text="@string/savings_naccount"
         android:textColor="@color/black"
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toStartOf="@id/tvTitle4"
@@ -62,7 +62,7 @@
         android:gravity="center"
         android:minLines="2"
         android:padding="4dp"
-        android:text="@string/tarrakki_zyaada_new_line"
+        android:text="@string/fixed_ndeposit"
         android:textColor="@color/black"
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -375,7 +375,7 @@
         android:gravity="center"
         android:minLines="2"
         android:padding="4dp"
-        android:text="@string/five_handred_500"
+        android:text="@string/one_handred_100"
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toStartOf="@id/tvTitleE3"
         app:layout_constraintHorizontal_weight="1"
