--- a/app/src/main/res/layout/row_sender_image.xml
+++ b/app/src/main/res/layout/row_sender_image.xml
@@ -18,6 +18,37 @@
         android:paddingEnd="@dimen/default_space"
         android:paddingBottom="@dimen/default_space">
 
+        <!--<TextView
+            android:id="@+id/tvDateTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="@{msg.dateTime}"
+            tools:text="25-03-2019 04:54PM" />
+
+        <ImageView
+            android:id="@+id/ivTriangle"
+            android:layout_width="@dimen/_12sdp"
+            android:layout_height="@dimen/_12sdp"
+            android:layout_below="@id/tvDateTime"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:adjustViewBounds="true"
+            android:elevation="2dp"
+            android:src="@drawable/ic_triangle_right"
+            android:tint="@color/colorAccent" />
+
+        <ImageView
+            android:id="@+id/ivMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvDateTime"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:adjustViewBounds="true"
+            android:elevation="2dp"
+            app:imgUrl="@{msg.imgUri}"
+            tools:src="@drawable/temp_article_details" />-->
         <TextView
             android:id="@+id/tvDateTime"
             android:layout_width="wrap_content"
@@ -39,7 +70,7 @@
             android:src="@drawable/ic_triangle_right"
             android:tint="@color/colorAccent" />
 
-        <TextView
+        <ImageView
             android:id="@+id/tvMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,14 +79,13 @@
             android:layout_marginTop="@dimen/_4sdp"
             android:layout_marginBottom="@dimen/_4sdp"
             android:layout_toStartOf="@id/ivTriangle"
+            android:adjustViewBounds="true"
             android:background="@drawable/shape_sender_round_gren_bg"
             android:elevation="2dp"
+            imgUrl="@{msg.imgUri}"
             android:padding="@dimen/_8sdp"
-            android:text="@{msg.message}"
-            android:textColor="@color/white"
-            android:textIsSelectable="true"
-            app:copyToClipBoard="@{true}"
-            tools:text="Dear Customer Dear Customer Dear Customer Dear Customer" />
+            tools:src="@drawable/temp_article_details" />
+
 
     </RelativeLayout>
 </layout>
