1. Resolved Bugs as per client feedback. 2. Implemented some changes as per client feedback. 3. Implementing APIs of Portfolio

--- a/app/src/main/res/layout/fragment_explore_all_invest_funds.xml
+++ b/app/src/main/res/layout/fragment_explore_all_invest_funds.xml
@@ -29,6 +29,160 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <Button
+                    android:id="@+id/btnExploreFunds"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:background="@drawable/shape_btn_idle_bg"
+                    android:fontFamily="@font/lato_semibold"
+                    android:gravity="center"
+                    android:text="@string/explore_all_funds"
+                    android:textColor="@android:color/white"
+                    tools:layout_marginTop="@dimen/default_space" />
+
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/clTarrakkiZyaada"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_space"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:background="@drawable/shape_cart_view"
+                    android:elevation="@dimen/space_2"
+                    android:orientation="vertical"
+                    android:padding="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/llWhyTarrakki">
+
+                    <ImageView
+                        android:id="@+id/tvKeyBenefits"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/_40sdp"
+                        android:layout_marginBottom="@dimen/default_space"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/tarrakki_zyaada_logo"
+                        app:layout_constraintBottom_toTopOf="@id/barrier2"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/ivTarrakkiZyaada"
+                        android:layout_width="@dimen/_24sdp"
+                        android:layout_height="@dimen/_24sdp"
+                        android:background="@drawable/page_selected"
+                        android:src="@drawable/ic_keyboard_arrow_right_dark_gray"
+                        android:tint="@color/white"
+                        app:layout_constraintBottom_toBottomOf="@id/tvKeyBenefits"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/tvKeyBenefits" />
+
+                    <android.support.constraint.Barrier
+                        android:id="@+id/barrier2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:barrierDirection="bottom"
+                        app:constraint_referenced_ids="tvKeyBenefits" />
+
+                    <ImageView
+                        android:id="@+id/ivB1"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_72sdp"
+                        android:padding="@dimen/_16sdp"
+                        android:src="@drawable/key_benefits_1"
+                        app:layout_constraintEnd_toStartOf="@id/ivB2"
+                        app:layout_constraintHorizontal_weight="3.25"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/barrier2" />
+
+                    <TextView
+                        android:id="@+id/tvB1L"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:gravity="center"
+                        android:paddingEnd="8dp"
+                        android:text="@string/higher_returns_than_your_bank"
+                        android:textSize="@dimen/_9ssp"
+                        app:layout_constraintEnd_toEndOf="@id/ivB1"
+                        app:layout_constraintStart_toStartOf="@id/ivB1"
+                        app:layout_constraintTop_toBottomOf="@id/ivB1" />
+
+                    <ImageView
+                        android:id="@+id/ivB2"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_72sdp"
+                        android:layout_marginStart="@dimen/space_8"
+                        android:layout_marginEnd="@dimen/space_8"
+                        android:padding="@dimen/_16sdp"
+                        android:src="@drawable/key_benefits_2"
+                        app:layout_constraintEnd_toStartOf="@id/ivB3"
+                        app:layout_constraintHorizontal_weight="3.5"
+                        app:layout_constraintStart_toEndOf="@id/ivB1"
+                        app:layout_constraintTop_toBottomOf="@id/barrier2" />
+
+                    <TextView
+                        android:id="@+id/tvB2L"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:gravity="center"
+                        android:text="@string/debit_card_powered_by_hdfc_bank_amp_visa_towards_your_investment"
+                        android:textSize="@dimen/_9ssp"
+                        app:layout_constraintEnd_toEndOf="@id/ivB2"
+                        app:layout_constraintStart_toStartOf="@id/ivB2"
+                        app:layout_constraintTop_toBottomOf="@id/ivB2" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="@dimen/_4sdp"
+                        android:background="@color/darker_gray"
+                        app:layout_constraintBottom_toBottomOf="@id/tvB2L"
+                        app:layout_constraintStart_toEndOf="@id/ivB1"
+                        app:layout_constraintTop_toTopOf="@id/ivB2" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="@dimen/_4sdp"
+                        android:background="@color/darker_gray"
+                        app:layout_constraintBottom_toBottomOf="@id/tvB2L"
+                        app:layout_constraintEnd_toStartOf="@id/ivB3"
+                        app:layout_constraintTop_toTopOf="@id/ivB2" />
+
+
+                    <ImageView
+                        android:id="@+id/ivB3"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_72sdp"
+                        android:padding="@dimen/_16sdp"
+                        android:src="@drawable/key_benefits_3"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_weight="3.25"
+                        app:layout_constraintStart_toEndOf="@id/ivB2"
+                        app:layout_constraintTop_toBottomOf="@id/barrier2" />
+
+                    <TextView
+                        android:id="@+id/tvB3L"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/space_8"
+                        android:gravity="center"
+                        android:paddingStart="8dp"
+                        android:text="@string/instant_redemption_redemption"
+                        android:textSize="@dimen/_9ssp"
+                        app:layout_constraintEnd_toEndOf="@id/ivB3"
+                        app:layout_constraintStart_toStartOf="@id/ivB3"
+                        app:layout_constraintTop_toBottomOf="@id/ivB3" />
+
+
+                </android.support.constraint.ConstraintLayout>
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rvMutualFunds"
                     android:layout_width="match_parent"
@@ -41,37 +195,22 @@
                     tools:listitem="@layout/row_section_investment_item"
                     tools:padding="8dp" />
 
-                <Button
-                    android:visibility="gone"
+                <!--<Button
                     android:id="@+id/btnIdle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginStart="@dimen/default_space"
                     android:layout_marginEnd="@dimen/default_space"
                     android:layout_marginBottom="@dimen/default_space"
                     android:background="@drawable/shape_btn_idle_bg"
                     android:fontFamily="@font/lato_semibold"
                     android:gravity="center"
-                    android:layout_gravity="center_horizontal"
                     android:text="@string/move_idle_money_from_your_bank_a_c"
                     android:textColor="@android:color/white"
-                    tools:layout_marginTop="@dimen/default_space" />
-
-                <Button
                     android:visibility="gone"
-                    android:id="@+id/btnExploreFunds"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_space"
-                    android:layout_marginEnd="@dimen/default_space"
-                    android:layout_marginBottom="@dimen/default_space"
-                    android:background="@drawable/shape_btn_idle_bg"
-                    android:fontFamily="@font/lato_semibold"
-                    android:gravity="center"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/explore_all_funds"
-                    android:textColor="@android:color/white"
-                    tools:layout_marginTop="@dimen/default_space" />
+                    tools:layout_marginTop="@dimen/default_space" />-->
+
 
             </LinearLayout>
 
