--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -134,6 +134,7 @@
                     android:layout_marginTop="@dimen/space_8"
                     android:layout_marginBottom="@dimen/space_8"
                     android:max="100"
+                    android:progressTint="@{fund.riskProgressColor}"
                     android:progress="@{fund.riskProgress}"
                     android:progressDrawable="@drawable/progress_horisental"
                     app:layout_constraintBottom_toBottomOf="parent"
