--- a/app/src/main/res/layout/dialog_redeem_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/dialog_redeem_tarrakki_zyaada.xml
@@ -260,11 +260,30 @@
             android:text="@string/upto_rs_50_000_or_90_of_the_current_investment_values_whichever_is_lower"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/notes_color"
-            android:visibility="@{isInstantRedeem?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnInvest"
-            tools:text="Upto Rs.50,000 or 90% of the current investment values, whichever is lower." />
+            app:layout_constraintTop_toBottomOf="@id/btnInvest" />
+
+        <FrameLayout
+            android:id="@+id/mProgress"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:layout_constraintBottom_toBottomOf="@+id/tvNote"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </FrameLayout>
+
 
     </android.support.constraint.ConstraintLayout>
 </layout>
