--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -177,6 +177,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/llSingleFolio">
 
+
             <TextView
                 android:id="@+id/tvAddPortfolio"
                 android:layout_width="wrap_content"
@@ -213,6 +214,19 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/colorAccent"
                 android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}" />
+
+            <TextView
+                android:id="@+id/tvApplyForDebitCart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_portfolio_debit_card"
+                android:drawablePadding="@dimen/space_4"
+                android:gravity="center"
+                android:text="@string/apply_for_debit_cart"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textColor="@color/colorAccent"
+                android:visibility="@{investment.applyForDebitCartBtnVisibility}"
+                app:applyForDebitCart="@{true}" />
 
         </LinearLayout>
 
