--- a/app/src/main/res/layout/row_tarrakki_zyaada_investment_list_item.xml
+++ b/app/src/main/res/layout/row_tarrakki_zyaada_investment_list_item.xml
@@ -103,7 +103,7 @@
                 android:textColor="@color/semi_black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvLastPriceL"
-                app:price="@{investment.totalInvestment}"
+                app:dprice="@{investment.totalInvestment}"
                 tools:text="\u20B939.55" />
 
             <TextView
@@ -128,7 +128,7 @@
                 android:textColor="@color/semi_black"
                 app:layout_constraintStart_toStartOf="@id/tvDayChangeL"
                 app:layout_constraintTop_toBottomOf="@+id/tvDayChangeL"
-                app:price="@{investment.currentValue}"
+                app:dprice="@{investment.currentValue}"
                 tools:text="@string/dummy3" />
 
             <TextView
@@ -231,7 +231,7 @@
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                 android:textColor="@color/colorAccent"
                 android:visibility="@{investment.applyForDebitCartBtnVisibility}"
-                app:applyForDebitCart="@{true}" />
+                app:applyForDebitCart="@{investment.folioData}" />
 
         </LinearLayout>
 
